[metadata]
license_file = LICENSE

[coverage:run]
branch = true
parallel = true
source = paste, tests
omit = paste/admin.py, paste/migrations

[flake8]
exclude = paste/migrations

[isort]
known_django = django
known_rest_framework = rest_framework
known_tests = tests
sections =
    FUTURE, STDLIB, DJANGO, REST_FRAMEWORK,
    THIRDPARTY, FIRSTPARTY, TESTS, LOCALFOLDER
lines_after_imports = 2
skip = paste/migrations

[mypy]
check_untyped_defs = True
disallow_untyped_calls = True
disallow_untyped_decorators = True
implicit_reexport = False
strict_equality = True
no_implicit_optional = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True
warn_unreachable = True
ignore_missing_imports = True
disable_error_code = override
plugins = mypy_django_plugin.main, mypy_drf_plugin.main

[mypy.plugins.django-stubs]
django_settings_module = tests.settings
